--- a/app/views/authors/edit.html.erb
+++ b/app/views/authors/edit.html.erb
@@ -1,5 +1,5 @@
-<h2>Create an Author</h2>
-<%= form_tag authors_path, method: "post" do %>
+<h2>Edit an Author</h2>
+<%= form_tag authors_path, method: "patch" do %>
   <% if @author.errors.any? %>
     <div id="error_explanation">
       <h2>There were some errors:</h2>
@@ -8,9 +8,9 @@
           <li><%= message %></li>
           <% end %>
       </ul>
-    </div>
+  </div>
   <% end %>
-  
+
   <div class="field<%= ' field_with_errors' if @author.errors[:name].any? %>">
     <%= label_tag "name", "Name" %>
     <%= text_field_tag "name", @author.name %>
